<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".presentation.character.CharacterFilterBottomSheet">

    <TextView
        android:id="@+id/status_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/status"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        app:checkedChip="@id/chip_alive"
        app:selectionRequired="true"
        app:singleLine="true"
        app:singleSelection="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/status_txt"
        >

        <com.google.android.material.chip.Chip
            style="@style/CustomChipStyle"
            android:id="@+id/chip_alive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alive" />

        <com.google.android.material.chip.Chip
            style="@style/CustomChipStyle"
            android:id="@+id/chip_dead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dead" />

        <com.google.android.material.chip.Chip
            style="@style/CustomChipStyle"
            android:id="@+id/chip_status_unknown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unknown" />

    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/species_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/species"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipGroup_status" />

    <HorizontalScrollView
        android:id="@+id/scrollView_species"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/species_txt">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup_species"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:checkedChip="@id/chip_human"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/chip_human"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/human" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/chip_alien"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alien" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/chip_humanoid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humanoid" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/chip_poopybutthole"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/poopybutthole" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/chip_mythologicalCreature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mythological" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/chip_robot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/robot" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/chip_animal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/animal" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/chip_cronenberg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cronenberg" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/chip_disease"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/disease" />

            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/gender_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/gender"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView_species" />


    <HorizontalScrollView
        android:id="@+id/scrollView_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gender_txt">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:checkedChip="@id/chip_male"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender_txt"
        app:singleLine="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            style="@style/CustomChipStyle"
            android:id="@+id/chip_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <com.google.android.material.chip.Chip
            style="@style/CustomChipStyle"
            android:id="@+id/chip_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female" />

        <com.google.android.material.chip.Chip
            style="@style/CustomChipStyle"
            android:id="@+id/chip_genderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genderless" />

        <com.google.android.material.chip.Chip
            style="@style/CustomChipStyle"
            android:id="@+id/chip_gender_unknown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unknown" />
    </com.google.android.material.chip.ChipGroup>
    </LinearLayout>
    </HorizontalScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_apply"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:background="@color/primary"
        android:text="@string/apply"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:letterSpacing="0.2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView_gender" />

</androidx.constraintlayout.widget.ConstraintLayout>